body color, padding, fixed navbar jumps

--- a/style.css
+++ b/style.css
@@ -1,9 +1,5 @@
-
-body{
-    margin: 0;
-}
-.main_grid{
-    display: grid;
+.section{
+    scroll-margin-top: 5em;
 }
 .header{
     padding: 2em;
@@ -30,10 +26,11 @@ body{
     border-radius: 50%;
 }
 .about{
-    background-color: #36393e;
-    border-bottom-style: solid;
-    border-width: 3px;
-    border-image: linear-gradient(to right,rgb(201, 97, 158), rgb(252, 150, 69))1;
+    scroll-margin-top: 10em;
+    background-color: #282b30;
+    margin-top: 3px;
+    margin-bottom: 3px;
+    border-radius: 10px;
 }
 .about h1{
     margin: 0;
@@ -45,18 +42,17 @@ body{
 .about p{
     color: silver;
     font-size: 1.3em;
-    padding-bottom: 2em;
+    padding: 2em;
     text-align: center;
     margin: 0;
 }
 
 .skills{
+    scroll-margin-top: 10em;
     margin: 0;
     background-color: #282b30;
-    border-bottom-style: solid;
-    border-width: 3px;
-    border-image: linear-gradient(to left,rgb(201, 97, 158), rgb(252, 150, 69))1;
-
+    margin-bottom: 3px;
+    border-radius: 10px;
 }
 .skills h1{
     margin: 0;
@@ -77,26 +73,30 @@ body{
     font-size: 1.3em;
     text-align: left;
     margin: 0;
+    padding: 1em;
 }
 .skills_content p{
     color: silver;
     font-size: 1.3em;
     text-align: center;
     margin: 0;
+    padding: 1em;
+
 }
 .sleft{
     width: 20em;
+    padding-bottom: 2em;
 }
 .sright{
     width: 20em;
+    padding-top: 2em;
 }
 .project{
+    scroll-margin-top: 5em;
     padding: 2em;
     background-color: #1e2124;
-    border-bottom-style: solid;
-    border-width: 3px;
-    border-image: linear-gradient(to right,rgb(201, 97, 158), rgb(252, 150, 69))1;
-    
+    margin-bottom: 3px;
+    border-radius: 10px;
 }
 .project h1{
     margin: 0;
@@ -159,11 +159,11 @@ a{
 
 
 .contact{
+    scroll-margin-top: 5em;
     padding: 2em;
-    background-color: #1e2124;
-    border-bottom-style: solid;
-    border-width: 3px;
-    border-image: linear-gradient(to right,rgb(201, 97, 158), rgb(252, 150, 69))1;
+    margin-bottom: 3px;
+    border-radius: 10px;
+    background-color: #282b30;
 }
 .con_cards{
     display: flex;
@@ -258,6 +258,7 @@ a{
 #navbar {
     overflow: hidden;
     background-color: #1e2124;
+    border-radius: 0px 0px 10px 10px;
     z-index: 999;
   }
   
@@ -294,6 +295,27 @@ a{
 
 
 
+
+/* body color */
+body {
+    margin: 3px;
+	background: linear-gradient(-45deg, rgb(201, 97, 158), rgb(252, 150, 69));
+	background-size: 400% 400%;
+	animation: gradient 5s ease infinite;
+	height: 100vh;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
 
 
 
